# simdec-python

./: .envrc.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  app.py  environment.yml  netlify.toml  package.json  pyproject.toml
.github/workflows/: joss_paper.yml  lint.yml  release.yaml  test.yml
docs/: api.rst  conf.py  getting-started.rst  index.rst  tutorials.rst
docs/_static/: version_switcher.json
docs/notebooks/: structural_reliability.ipynb
joss/: paper.bib  paper.md
panel/: Dockerfile  app.py  cloudbuild.yaml  index.html  login.html  logout.html  sampling.py  simdec.py  simdec_app.py
panel/data/: stress.csv
scripts/: build_wasm.sh
src/simdec/: __init__.py  auth.py  decomposition.py  heterogeneity_indices.py  sensitivity_indices.py  significance.py  visualization.py  workflow.py
tests/: test_decomposition.py  test_decomposition_43.py  test_heterogeneity_indices.py  test_sensitivity_indices.py  test_sensitivity_indices_43.py  test_significance.py  test_visualization.py
tests/data/: CO2.csv  crying.csv  stress.csv
